--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>StarBooks</title>
+  <link rel="icon" type="image/png" href="components/—Pngtree—open book logo_15366757.png" />
   <link rel="stylesheet" href="style.css" />
 </head>
 
